# tutorial_torchrl

./: .gitignore  main.py  pyproject.toml  torch_module.py
__marimo__/session/: main.py.json  optim.py.json  torch.py.json  torch_module.py.json
bak/: main.py  ted.py
bak/__marimo__/session/: main.py.json  ted.py.json
tutorial/getstarted/: data_collections_and_storage.py  env_ted_transforms.py  logging.py  model_optimization.py  torch_modules.py
tutorial/getstarted/__marimo__/session/: data_collections_and_storage.py.json  env_ted_transforms.py.json  logging.py.json  model_optimization.py.json  torch_modules.py.json
tutorial/getstarted/csv_logs/tutorial_exp/videos/: my_video_0.pt
