[project]
name = "tutorial-torchrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "basedpyright>=1.34.0",
    "dm-meltingpot>=2.2.0",
    "gymnasium>=1.2.2",
    "marimo>=0.18.0",
    "tensordict>=0.10.0",
    "torchrl>=0.10.1",
]
